# SuperPoint

./: CMakeLists.txt  CPP_API_GUIDE.md  DEPLOYMENT_COMPARISON.md  FILES_CREATED.txt  GPU_COMPATIBILITY.md  INSTALL_CUDNN.md  QUICKSTART.md  README_CONVERSION.md  README_SUMMARY.md  TENSORRT_CONVERSION_GUIDE.md  auto_switch_cuda11.sh  benchmark_cpp_gpu.sh  build_cpp_api.sh  check_cuda_environment.py  check_inference_options.py  check_tensorrt_compatibility.md  convert_to_onnx.py  convert_to_tensorrt.py  install_cpp_gpu_all.sh  install_cudnn9.sh  onnx_inference.py  quick_convert.sh  superpoint_cpp_api.cpp  switch_cuda.sh  switch_to_cuda11_permanently.sh  tensorrt_inference.py  test_conversion.py  test_dynamic_resolution.py  test_img_0926.py
cpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  GIT_SETUP.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_LOCAL.md
cpp/docs/: DEPLOYMENT.md  FINAL_REPORT.md  GTX1060_COMPATIBILITY.md  README_CPP_GPU.md
cpp/scripts/: benchmark.sh  build.sh  download_onnxruntime.sh  install_all.sh  install_cuda11.sh  setup_env.sh
